Bug 365458 - [RFE] [OpenVPN] plasma editor doesn't save tls-auth info while exporting vpn profile
Summary: [RFE] [OpenVPN] plasma editor doesn't save tls-auth info while exporting vpn ...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_networkmanagement (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Lukáš Tinkl
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-07-12 08:52 UTC by Jacek Palczewski
Modified: 2024-12-23 18:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.7.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jacek Palczewski 2016-07-12 08:52:48 UTC
While exporting a VPN profile from a plasma editor, information like
"
tls-auth ta.key 1 
"
isn't present in exported file, what makes exported profile unusable(it just hangs at trying to connect - a try to use one from cli openvpn suggests no possible avoidance to MiTM attacks).

Reproducible: Always

Steps to Reproduce:
0. Create a VPN which needs a tls-auth key, as described in details section.
1. Create an VPN profile by hand, in nm-connection-editor "Connection"->"Add"->OpenVPN
2. Make sure that it works and sucessfully connects(i.e. key and proper direction is set in "Advanced" window)
3. Export it and import again.

Actual Results:  
Imported profile doesn't have any info about tls-key.

Expected Results:  
There should be a tls-auth line, as specifed above.

Workaround is really simple(it's enough to tick correct option and select that key), however - it's just a unnecessary waste of time debugging what's wrong.
Comment 1 Lamarque V. Souza 2016-09-05 13:31:14 UTC
Git commit 48db82bc5b5801eeb7cbbad838cca6460a4afce5 by Lamarque V. Souza.
Committed on 05/09/2016 at 13:25.
Pushed by lvsouza into branch 'master'.

Export tls-auth tag for the other connection types too.

M  +5    -3    vpn/openvpn/openvpn.cpp

http://commits.kde.org/plasma-nm/48db82bc5b5801eeb7cbbad838cca6460a4afce5
Comment 2 Lamarque V. Souza 2016-09-05 13:32:02 UTC
Git commit 4eede9a350e36c84594952dd1f2c999c0d02d2ec by Lamarque V. Souza.
Committed on 05/09/2016 at 13:31.
Pushed by lvsouza into branch 'Plasma/5.7'.

Export tls-auth tag for the other connection types too.
FIXED-IN: 5.7.5

M  +5    -3    vpn/openvpn/openvpn.cpp

http://commits.kde.org/plasma-nm/4eede9a350e36c84594952dd1f2c999c0d02d2ec