Export tls-auth tag for the other connection types too.

BUG: 365458
FIXED-IN: 5.7.5